Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignIntegerIntObj.quorum
class Main
    action Main
        Integer v
        v:SetValue(5)
        Test(v)
    end

    action Test(integer var)
        if var = 5
            output "passed"
        end
    end
end
