Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerIntObjField.quorum
class Main
    Integer v
    action Main
        v:SetValue(5)
        Test(v)
    end

    action Test(integer var)
    end
end
